--- a/build.gradle
+++ b/build.gradle
@@ -27,30 +27,28 @@ def versions = [
         spock:      '1.1-groovy-2.4-rc-3',
         groovy:   '2.4.7',
         junit:    '4.11',
-//        grava:'19.0',
-//        slf4j:'1.7.21',
-//        jukito:'1.4.1',
-//        guice:'3.0',
-//        mockito:'1.10.19',
-//        camel:      '2.17.3',
-//        wiremock: '1.56'
+        wiremock: '1.56'
 ]
 
 dependencies {
 
-    //    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
-    compile group: 'org.spockframework', name: 'spock-core', version: "${versions.spock}"
-    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
-    compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.hateoas:spring-hateoas")
 
+    compile("org.springframework.boot:spring-boot-starter-web")
+            {
+                exclude module: "spring-boot-starter-tomcat"
+            }
+    compile("org.springframework.boot:spring-boot-starter-jetty")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+
+    testCompile group: 'org.spockframework', name: 'spock-core', version: "${versions.spock}"
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.codehaus.groovy', name: 'groovy-all', version: "${versions.groovy}"
-    testCompile(group: 'com.github.tomakehurst', name: 'wiremock', version:'1.56', classifier:'standalone') {
+    testCompile(group: 'com.github.tomakehurst', name: 'wiremock', version: "${versions.wiremock}", classifier:'standalone') {
         exclude(module: 'guava')
         exclude(module: 'jetty')
     }
-
-
-
+}
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.9'
 }
